Fix 'Associations are sometime not addable in class diagram'

On error, itemAt() returned the graphical element for the visual
connection, not the selected widget.

BUG:409631
FIXED-IN:2.29.90 (KDE Applications 19.11.90)